# xdg-desktop-portal-screencast

./: Cargo.toml  README.md  install.fish  install.sh
crates/libsourceselector/: Cargo.toml
crates/libsourceselector/src/: lib.rs
crates/sourceselector-ui/: Cargo.toml
crates/sourceselector-ui/src/: egui_fonts.rs  main.rs
crates/xdg-desktop-portal-screencast/: Cargo.toml
crates/xdg-desktop-portal-screencast/src/: cinnamon_proxy.rs  dbus_proxy.rs  lib.rs  main.rs  muffin_proxy.rs  portal_impl.rs  running_app_watcher.rs  sigint.rs  sigint_handler.rs
crates/xdg-desktop-portal-screencast/src/cinnamon_proxy/: portal_handlers.rs
crates/xdg-desktop-portal-screencast/src/dbus_proxy/: muffin.rs  xdg_desktop_portal.rs
crates/xdg-desktop-portal-screencast/src/dbus_proxy/cinnamon/: portal_handlers.rs
crates/xdg-desktop-portal-screencast/src/dbus_proxy/muffin/: display_config.rs  screencast.rs  screencast_session.rs  screencast_stream.rs  window.rs
crates/xdg-desktop-portal-screencast/src/dbus_proxy/xdg_desktop_portal/: session.rs
crates/xdg-desktop-portal-screencast/src/muffin_proxy/: display.rs  display_config.rs  screencast_session.rs
crates/xdg-desktop-portal-screencast/src/portal_impl/: screencast.rs  screencast_session.rs  screencast_stream.rs
crates/xdg-desktop-portal-screencast/src/xdg_desktop_portal_proxy/: session.rs
data/usr/share/xdg-desktop-portal/: x-cinnamon-portals.conf
data/usr/share/xdg-desktop-portal/portals/: screencast.portal
files/etc/xdg/autostart/: xdg-desktop-portal-screencast.desktop
(+3 files in other folders)
