[package]
name = "xdg-desktop-portal-screencast"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
freedesktop-icons = "0.4.0"
futures-util = "0.3.31"
libsourceselector = { version = "0.1.0", path = "../libsourceselector" }
log = "0.4.29"
rust-ini = "0.21.3"
tokio = { version = "1.49.0", features = ["full"] }
zbus = { version = "5.13.1", features = ["tokio"] }
